package application.models;

import application.models.Interfaces.Réseau;

public class MasterCard implements Réseau {

	public void contester() {
		// TODO Auto-generated method stub

	}
	
	@Override
	public String toString() {
		return "MasterCard";
	}
}
