package application.models;

import application.models.Abstracts.Stock;

public class StockNumérique extends Stock {

}
