package application.models;

import application.models.Interfaces.Réseau;

public class Visa implements Réseau {

	public void contester() {
		// TODO Auto-generated method stub

	}
	
	@Override
	public String toString() {
		return "Visa";
	}
}
